--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mykel Loren Brinkerhoff"
   avatar           : "profile.png"
-  bio              : "Ph.D. Student in the Department of Linguistics at UC Santa Cruz"
+  bio              : "Ph.D. Student in the Department of Linguistics at UC Santa Cruz. "
   location         : "Santa Cruz, CA"
   employer         :
   pubmed           : 
