Trying to secure the website

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=a8iD_AkAAAAJ&hl=en"
-  email            : "mlbrinke[at]ucsc[dot]edu"
+  email            : "mlbrinke@ucsc.edu"
   researchgate     : "https://www.researchgate.net/profile/Mykel_Brinkerhoff"
   uri              :
   bitbucket        :
