--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : UA-165918288-1
+    tracking_id          : G-MW6LP1WSCZ
 
 
 # Site Author
