changing analytics to ga4

--- a/_config.yml
+++ b/_config.yml
@@ -70,13 +70,12 @@ social:
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
 
-
 # Analytics
 analytics:
-  provider               :  "google" # false (default), "google", "google-universal", "custom"
+  provider               : "google-gtag"
   google:
-    tracking_id          : G-MW6LP1WSCZ
-
+    measurement_id          : G-MW6LP1WSCZ
+    anonymize_ip         : # true, false (default)
 
 # Site Author
 author:
