--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social:
 analytics:
   provider               : "google-gtag"  # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-MW6LP1WSCZ"
+    tracking_id          : G-MW6LP1WSCZ
     anonymize_ip         : # true, false (default)
 
 # Site Author
