--- a/_config.yml
+++ b/_config.yml
@@ -7,17 +7,17 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Mykel Loren Brinkerhoff"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Mykel Loren Brinkerhoff"
+name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://mylbrinkerhoff.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "mylbrinkerhoff/mylbrinkerhoff.github.io"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : false
+future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
@@ -70,24 +70,25 @@ social:
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
 
+
 # Analytics
 analytics:
-  provider               : "google-gtag"  # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    measurement_id          : G-MW6LP1WSCZ
-    anonymize_ip         : # true, false (default)
+    tracking_id          :
+
 
 # Site Author
 author:
-  name             : "Mykel Loren Brinkerhoff"
-  avatar           : "Me.jpeg"
-  bio              : "Ph.D. Student in the Department of Linguistics at UC Santa Cruz. "
-  location         : "Santa Cruz, CA"
+  name             : "Your Sidebar Name"
+  avatar           : "profile.png"
+  bio              : "Your biography for the left-hand sidebar"
+  location         : "Location"
   employer         :
-  pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=a8iD_AkAAAAJ&hl=en"
-  email            : "mlbrinke@ucsc.edu"
-  researchgate     : "https://www.researchgate.net/profile/Mykel_Brinkerhoff"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "http://yourfullgooglescholarurl.com"
+  email            :
+  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
@@ -95,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "mylbrinkerhoff"
+  github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "https://orcid.org/0000-0002-2190-6544"
+  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : 
+  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
