Fix website with updated informaiton
- Update About Me page.
- Update Gemfile.lock
- Update navigation.yaml
- Update publications page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,11 +20,11 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-#  - title: "Portfolio"
-#    url: /portfolio/
+# - title: "Portfolio"
+  #   url: /portfolio/
         
 #  - title: "Blog Posts"
-#    url: /year-archive/
+  #  url: /year-archive/
     
   - title: "CV"
     url: /cv/
@@ -32,5 +32,5 @@ main:
 #  # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
+  # - title: "Guide"
 #    url: /markdown/
